  * Rails 3 compatibility.
  * All controllers and views are namespaced, for example: Devise::SessionsController and "devise/sessions".
  * You can specify the controller in routes and have specific controllers for each role.
  * Devise.orm is deprecated. This reduces the required API to hook your ORM with devise.
  * Use metal for failure app.
  * HTML e-mails now have proper formatting.
  * Do not remove options from Datamapper and MongoMapper in find

* deprecations
  * Rails 3 compatible only.
  * Scoped views are no longer "sessions/users/new". Now use "users/sessions/new".
  * Devise.orm is deprecated, just require "devise/orm/YOUR_ORM" instead.
  * Devise.default_url_options is deprecated, just modify ApplicationController.default_url_options.

== 1.0.4

* bug fix
  * Fixed a bug when deleting an account with rememberable
  * Fixed a bug with custom controllers

== 1.0.3

* enhancements
  * HTML e-mails now have proper formatting
  * Do not remove MongoMapper options in find

== 1.0.2

* enhancements
  * Allows you set mailer content type (by github.com/glennr)

* bug fix
  * Uses the same content type as request on http authenticatable 401 responses

== 1.0.1

* enhancements
  * HttpAuthenticatable is not added by default automatically.
  * Avoid mass assignment error messages with current password.

* bug fix
  * Fixed encryptors autoload

== 1.0.0

* deprecation
  * :old_password in update_with_password is deprecated, use :current_password instead

* enhancements
  * Added Registerable
  * Added Http Basic Authentication support
  * Allow scoped_views to be customized per controller/mailer class
  * [#99] Allow authenticatable to used in change_table statements

== 0.9.2

* bug fix
  * Ensure inactive user cannot sign in
  * Ensure redirect to proper url after sign up

* enhancements
  * Added gemspec to repo
  * Added token authenticatable (by github.com/grimen)

== 0.9.1

* bug fix
  * Allow bigger salt size (by github.com/jgeiger)